# colutius

./: .clang-format  .gitignore  CMakeLists.txt  README.md  colutius.pro
.github/workflows/: Linux.yml  MacOS.yml  Windows.yml  backup.yml
docs/: README-CN.md  README-EN.md
resource/: Login.qss  Widget.qss  resource.qrc
resource/iconfont/: iconfont.json  letter.json
resource/qss/: Config.qss  Login.qss  Widget-dark.qss  Widget.qss
src/: main.cpp
src/irc/: channel.cpp  channel.h  client.cpp  client.h  fileio.cpp  fileio.h  message.cpp  message.h  server.cpp  server.h
src/ui/: bochatwidget.cpp  bochatwidget.h  config.cpp  config.h  config.ui  login.cpp  login.h  login.ui  systemTrayIcon.cpp  systemTrayIcon.h  systemtrayicon.cpp  systemtrayicon.h  widget.cpp  widget.h  widget.ui
